--- a/CloudProject/Views/Documents/All.cshtml
+++ b/CloudProject/Views/Documents/All.cshtml
@@ -8,6 +8,23 @@
 
 <h2>Мои документы</h2>
 
+@using (Html.BeginForm("Find", "Documents", FormMethod.Post))
+{
+    <div class="form-horizontal">
+        <hr />
+        <div class="form-group">
+            <p>Поиск файлов: </p>
+            <div class="col-md-10">
+                @Html.TextBox("text")
+            </div>
+        </div>
+
+        <div class="form-group">
+            <input type="submit" value="Найти" class="btn btn-default" />
+        </div>
+    </div>
+}
+
 <table class="table">
     <tr>
         <td>
